# serializer version: 1
# name: test_AetherNet_large_x4
  ImageModelDescriptor(
    architecture=AetherNetArch(
      id='AetherNet',
      name='AetherNet',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      'aether_large',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_AetherNet_medium_x4
  ImageModelDescriptor(
    architecture=AetherNetArch(
      id='AetherNet',
      name='AetherNet',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      'aether_medium',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_AetherNet_small_x4
  ImageModelDescriptor(
    architecture=AetherNetArch(
      id='AetherNet',
      name='AetherNet',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      'aether_small',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_AetherNet_tiny_x4
  ImageModelDescriptor(
    architecture=AetherNetArch(
      id='AetherNet',
      name='AetherNet',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      'aether_tiny',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
